[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# AtCoder 2020年言語アップデート以降に使用できるクレート。
# 次のページに各クレートについての細かい紹介があります。
# https://github.com/rust-lang-ja/atcoder-rust-resources/wiki/2020-Update

# 数値型の抽象化、多倍長整数、複素数、分数、及び整数型の拡張
num = "=0.2.1"
num-bigint = "=0.2.6"
num-complex = "=0.2.4"
num-integer = "=0.1.42"
num-iter = "=0.1.40"
num-rational = "=0.2.4"
num-traits = "=0.2.11"

# `num-traits`の自動実装
num-derive = "=0.3.0"

# NumPyの`ndarray`のような多次元配列
ndarray = "=0.13.0"

# 線形代数
nalgebra = "=0.20.0"

# (線形)代数の抽象化
alga = "=0.9.3"

# libmのRust実装
libm = "=0.2.1"

# 乱数
rand = { version = "=0.7.3", features = ["small_rng"] }
getrandom = "=0.1.14"
rand_chacha = "=0.2.2"
rand_core = "=0.5.1"
rand_hc = "=0.2.0"
rand_pcg = "=0.2.1"

# 乱数の分布の追加
rand_distr = "=0.2.2"

# グラフ
petgraph = "=0.5.0"

# 挿入順を保持するhash table
indexmap = "=1.3.2"

# 正規表現
regex = "=1.3.6"

# staticアイテムの遅延初期化
lazy_static = "=1.4.0"

# `NotNan<f64>`, `OrderedFloat<f64>`
ordered-float = "=1.0.2"

# ASCII文字列
ascii = "=1.0.0"

# permutation
permutohedron = "=0.2.4"

# スライスの拡張
superslice = "=1.0.0"

# イテレータの拡張
itertools = "=0.9.0"

# イテレータの拡張（一次元累積和と浮動小数点数の等差数列）
itertools-num = "=0.1.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`のリテラル用マクロ
maplit = "=1.0.2"

# 即席enum `Either<L, R>`
either = "=1.5.3"

# `BTreeMap`, `BTreeSet`, `HashMap`, `HashSet`, `Vec`の永続データ構造版
im-rc = "=14.3.0"

# 可変長bit set
fixedbitset = "=0.2.0"

# 可変長bit set
bitset-fixed = "=0.1.0"

# 競技プログラミングの入出力サポートその1
proconio = { version = "=0.3.6", features = ["derive"] }

# 競技プログラミングの入出力サポートその2
text_io = "=0.1.8"

# 競技プログラミングの入出力サポートその3
whiteread = "=0.5.0"

# 高速なハッシュ関数
rustc-hash = "=1.1.0"

# ある長さまでは要素を「直に」持つ可変長配列
smallvec = "=1.2.0"
cli_test_dir = "0.1"

# ---------------------------------------------------------------------

[dev-dependencies]
cli_test_dir = "0.1"

[[bin]]
name = "beginners_selection_abc081b"
path = "src/contest/beginners_selection/abc081b.rs"
    [[bin]]
name = "beginners_selection_abc087b"
path = "src/contest/beginners_selection/abc087b.rs"
    [[bin]]
name = "beginners_selection_abc083b"
path = "src/contest/beginners_selection/abc083b.rs"
    [[bin]]
name = "beginners_selection_abc088b"
path = "src/contest/beginners_selection/abc088b.rs"
    [[bin]]
name = "beginners_selection_abc085b"
path = "src/contest/beginners_selection/abc085b.rs"
    [[bin]]
name = "beginners_selection_abc085c"
path = "src/contest/beginners_selection/abc085c.rs"
    [[bin]]
name = "beginners_selection_abc049c"
path = "src/contest/beginners_selection/abc049c.rs"
    [[bin]]
name = "beginners_selection_abc086c"
path = "src/contest/beginners_selection/abc086c.rs"
    [[bin]]
name = "beginners_selection_abc075b"
path = "src/contest/beginners_selection/abc075b.rs"
    [[bin]]
name = "arc163_a"
path = "src/contest/arc/163/a.rs"
    [[bin]]
name = "arc163_b"
path = "src/contest/arc/163/b.rs"
    [[bin]]
name = "arc163_c"
path = "src/contest/arc/163/c.rs"
    [[bin]]
name = "arc163_d"
path = "src/contest/arc/163/d.rs"
    [[bin]]
name = "beginners_selectionexhaustive_arc061a"
path = "src/contest/beginners_selection/exhaustive/arc061a.rs"
    [[bin]]
name = "beginners_selectionexhaustive_abc079c"
path = "src/contest/beginners_selection/exhaustive/abc079c.rs"
    [[bin]]
name = "beginners_selectionexhaustive_abc104c"
path = "src/contest/beginners_selection/exhaustive/abc104c.rs"
    [[bin]]
name = "beginners_selectionexhaustive_arc029a"
path = "src/contest/beginners_selection/exhaustive/arc029a.rs"
    [[bin]]
name = "beginners_selectionexhaustive_abc002d"
path = "src/contest/beginners_selection/exhaustive/abc002d.rs"
    [[bin]]
name = "beginners_selectiondfs_atc001a"
path = "src/contest/beginners_selection/dfs/atc001a.rs"
    [[bin]]
name = "beginners_selectiondfs_arc031b"
path = "src/contest/beginners_selection/dfs/arc031b.rs"
    [[bin]]
name = "beginners_selectiondfs_arc037b"
path = "src/contest/beginners_selection/dfs/arc037b.rs"
    [[bin]]
name = "beginners_selectiondfs_aoj1160"
path = "src/contest/beginners_selection/dfs/aoj1160.rs"
    [[bin]]
name = "beginners_selectionbfs_abc007c"
path = "src/contest/beginners_selection/bfs/abc007c.rs"
    [[bin]]
name = "beginners_selectionbfs_joi2011yoe"
path = "src/contest/beginners_selection/bfs/joi2011yoe.rs"
    [[bin]]
name = "beginners_selectionbfs_abc088d"
path = "src/contest/beginners_selection/bfs/abc088d.rs"
    [[bin]]
name = "beginners_selectionbfs_agc033a"
path = "src/contest/beginners_selection/bfs/agc033a.rs"
    [[bin]]
name = "beginners_selectionbfs_arc005c"
path = "src/contest/beginners_selection/exhaustive/abc095c.rs"
    [[bin]]
name = "beginners_selectionbfs_sumitb2019d"
path = "src/contest/beginners_selection/exhaustive/sumitb2019d.rs"
    [[bin]]
name = "beginners_selectionexhaustive_joi2007hoc"
path = "src/contest/beginners_selection/exhaustive/joi2007hoc.rs"
    [[bin]]
name = "beginners_selectionexhaustive_s8pc6b"
path = "src/contest/beginners_selection/exhaustive/s8pc6b.rs"
    [[bin]]
name = "beginners_selectionbinary_joi2009hob"
path = "src/contest/beginners_selection/binary/joi2009hob.rs"
    [[bin]]
name = "beginners_selectionbinary_abc077c"
path = "src/contest/beginners_selection/binary/abc077c.rs"
    [[bin]]
name = "beginners_selectiondp_edpc_a"
path = "src/contest/beginners_selection/dp/edpc_a.rs"
    [[bin]]
name = "beginners_selectiondp_edpc_b"
path = "src/contest/beginners_selection/dp/edpc_b.rs"
    [[bin]]
name = "beginners_selectiondp_edpc_c"
path = "src/contest/beginners_selection/dp/edpc_c.rs"
    